umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hydrocarbons_prismane.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: edn_to_string(&results).unwrap()
---
{:atom-typing {:success true :output {:atoms {"0" "C#h#v3" "1" "C#h#v3" "2" "C#h#v3" "3" "C#h#v3" "4" "C#h#v3" "5" "C#h#v3"} :bonds [[0 1 "1"] [1 2 "1"] [0 2 "1"] [3 4 "1"] [4 5 "1"] [3 5 "1"] [0 3 "1"] [1 4 "1"] [2 5 "1"]] :charge 0 :spin "#u0 #s1"}} :counts {:success true :output {:atoms {"0" "C#h#v3" "1" "C#h#v3" "2" "C#h#v3" "3" "C#h#v3" "4" "C#h#v3" "5" "C#h#v3"} :bonds [[0 1 "1"] [1 2 "1"] [0 2 "1"] [3 4 "1"] [4 5 "1"] [3 5 "1"] [0 3 "1"] [1 4 "1"] [2 5 "1"]] :charge 0 :spin "#u0 #s1"}}}
