umol-graph/tests/resolution/snapshots/resolution__resolution_suite__run_conformance_test@hypervalent_clo4-.snap
---
source: umol-graph/tests/resolution/mod.rs
expression: "results.to_edn().to_string_with(&FormatConfig::default())"
---
{
  :atom-typing {
    :output {
      :atoms ["Cl#v7" "O#n2#v2" "O#n2#v2" "O#n2#v2" "O#c-#n3#v"]
      :bonds [[0 1 "2"] [0 2 "2"] [0 3 "2"] [0 4 "1"]]}
    :success true}
  :counts {
    :output {
      :atoms ["Cl#v7" "O#n2#v2" "O#n2#v2" "O#n2#v2" "O#c-#n3#v"]
      :bonds [[0 1 "2"] [0 2 "2"] [0 3 "2"] [0 4 "1"]]}
    :success true}}
